--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -81,12 +81,12 @@ SWIFT_VERSION = 5.0
 
 According to the [<abbr title="Portable Operating System Interface">POSIX</abbr> standard](http://pubs.opengroup.org/onlinepubs/9699919799/basedefs/V1_chap08.html#tag_08)
 environment variables have names consisting solely of
-uppercase letters, digits, and underscore (`_`) ---
+uppercase letters, digits, and underscore (`_`) —
 a convention I like to call `SCREAMING_SNAKE_CASE` 🐍🗯.
 
 {% endinfo %}
 
----
+* * *
 
 At first glance,
 `xcconfig` files bear a striking resemblance to `.env` files,
@@ -123,9 +123,11 @@ Xcode assigns inherited values in the following order
 - Target Build Settings
 
 {% info %}
+
 Spaces are used to delimit items in string and path lists.
 To specify an item containing whitespace,
 you must enclose it with quotation marks (`"`).
+
 {% endinfo %}
 
 ### Referencing Values
@@ -281,7 +283,7 @@ a distinct name and app icon.
 PRODUCT_NAME = $(inherited) α
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon-Alpha
 
----
+//////////////////////////////////////////////////
 
 // Staging.xcconfig
 PRODUCT_NAME = $(inherited) β
