--- a/2019-05-13-xcconfig.md
+++ b/2019-05-13-xcconfig.md
@@ -160,7 +160,7 @@ if the referenced build setting evaluates as empty.
 $(<#BUILD_SETTING_NAME#>:default=<#fallback value#>)
 ```
 
-### Conditionalizing
+### Conditionalizing Build Settings
 
 You can conditionalize build settings according to their
 SDK (`sdk`), architecture (`arch`), and / or configuration (`config`)
@@ -188,7 +188,7 @@ to speed up local builds by only compiling for the active architecture:
 ONLY_ACTIVE_ARCH[config=Debug][sdk=*][arch=*] = YES
 ```
 
-### Including Settings from Other Configuration Files
+### Including Build Settings from Other Configuration Files
 
 A build configuration file can include settings from other configuration files
 using the same `#include` syntax
