--- a/2020-02-27-xcconfig.md
+++ b/2020-02-27-xcconfig.md
@@ -10,7 +10,8 @@ excerpt: >-
 status:
   swift: 5.2
 revisions:
-  2019-02-27: Updated for Xcode 11.4
+  2019-05-13: Initial Publication
+  2020-02-27: Updated for Xcode 11.4
 ---
 
 Software development best practices
@@ -65,7 +66,7 @@ Fundamentally,
 each configuration file consists of a sequence of key-value assignments
 with the following syntax:
 
-```
+```xcconfig
 <#BUILD_SETTING_NAME#> = <#value#>
 ```
 
@@ -73,7 +74,7 @@ For example,
 to specify the Swift language version for a project,
 you'd specify the `SWIFT_VERSION` build setting like so:
 
-```
+```xcconfig
 SWIFT_VERSION = 5.0
 ```
 
@@ -99,7 +100,7 @@ _Behold!_
 To append rather than replace existing definitions,
 use the `$(inherited)` variable like so:
 
-```
+```xcconfig
 <#BUILD_SETTING_NAME#> = $(inherited)<#additional value#>
 ```
 
@@ -109,7 +110,7 @@ the compiler searches for frameworks
 to find included header files
 (`FRAMEWORK_SEARCH_PATHS`):
 
-```
+```xcconfig
 FRAMEWORK_SEARCH_PATHS = $(inherited) $(PROJECT_DIR)
 ```
 
@@ -136,7 +137,7 @@ You can substitute values from other settings
 by their declaration name
 with the following syntax:
 
-```
+```xcconfig
 <#BUILD_SETTING_NAME#> = $(<#ANOTHER_BUILD_SETTING_NAME#>)
 ```
 
@@ -144,7 +145,7 @@ Substitutions can be used to
 define new variables according to existing values,
 or inline to build up new values dynamically.
 
-```
+```xcconfig
 OBJROOT = $(SYMROOT)
 CONFIGURATION_BUILD_DIR = $(BUILD_DIR)/$(CONFIGURATION)-$(PLATFORM_NAME)
 ```
@@ -156,8 +157,8 @@ you can use the `default` evaluation operator
 to specify a fallback value to use
 if the referenced build setting evaluates as empty.
 
-```
-$(<#BUILD_SETTING_NAME#>:default=<#fallback value#>)
+```xcconfig
+$(<#BUILD_SETTING_NAME#>:default=<#value#>)
 ```
 
 ### Conditionalizing Build Settings
@@ -166,7 +167,7 @@ You can conditionalize build settings according to their
 SDK (`sdk`), architecture (`arch`), and / or configuration (`config`)
 according to the following syntax:
 
-```
+```xcconfig
 <#BUILD_SETTING_NAME#>[sdk=<#sdk#>] = <#value for specified sdk#>
 <#BUILD_SETTING_NAME#>[arch=<#architecture#>] = <#value for specified architecture#>
 <#BUILD_SETTING_NAME#>[config=<#configuration#>] = <#value for specified configuration#>
@@ -175,7 +176,7 @@ according to the following syntax:
 Given a choice between multiple definitions of the same build setting,
 the compiler resolves according to specificity.
 
-```
+```xcconfig
 <#BUILD_SETTING_NAME#>[sdk=<#sdk#>][arch=<#architecture#>] = <#value for specified sdk and architectures#>
 <#BUILD_SETTING_NAME#>[sdk=*][arch=<#architecture#>] = <#value for all other sdks with specified architecture#>
 ```
@@ -184,7 +185,7 @@ For example,
 you might specify the following build setting
 to speed up local builds by only compiling for the active architecture:
 
-```
+```xcconfig
 ONLY_ACTIVE_ARCH[config=Debug][sdk=*][arch=*] = YES
 ```
 
@@ -195,7 +196,7 @@ using the same `#include` syntax
 as the equivalent `C` directive
 on which this functionality is based:
 
-```
+```xcconfig
 #include "<#path/to/File.xcconfig#>"
 ```
 
@@ -218,7 +219,7 @@ But you might use this
 as a hook for optional development tools like [Reveal](https://revealapp.com/),
 which requires the following configuration:
 
-```
+```xcconfig
 # Reveal.xcconfig
 OTHER_LDFLAGS = $(inherited) -weak_framework RevealServer
 FRAMEWORK_SEARCH_PATHS = $(inherited) /Applications/Reveal.app/Contents/SharedSupport/iOS-Libraries
@@ -278,7 +279,7 @@ You can make things easier on yourself
 with `xcconfig` files that assign each configuration
 a distinct name and app icon.
 
-```
+```xcconfig
 // Development.xcconfig
 PRODUCT_NAME = $(inherited) α
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon-Alpha
@@ -319,7 +320,7 @@ An alternative approach takes these environment-specific values
 and puts them where they belong —
 into `xcconfig` files.
 
-```
+```xcconfig
 // Development.xcconfig
 API_BASE_URL = api.staging.example.com
 
