Fix typo in example code

--- a/2020-02-27-xcconfig.md
+++ b/2020-02-27-xcconfig.md
@@ -412,7 +412,7 @@ enum Configuration {
 
 enum API {
     static var baseURL: URL {
-        return try! URL(string: "https://" + try! Configuration.value(for: "API_BASE_URL"))!
+        return try! URL(string: "https://" + Configuration.value(for: "API_BASE_URL"))!
     }
 }
 ```
