Replace comment warning with tip on workaround

--- a/2020-02-27-xcconfig.md
+++ b/2020-02-27-xcconfig.md
@@ -335,14 +335,9 @@ API_BASE_URL = api.example.com
 `xcconfig` files treat the sequence
 `//` as a comment delimiter,
 regardless of whether it's enclosed in quotation marks.
-If you try to escape with backslashes `\/\/`,
-those backslashes show up literally
-and must be removed from the resulting value.
-This is especially inconvenient when specifying per-environment URL constants.
-
-If you'd rather not work around this unfortunate behavior,
-you can always omit the scheme and prepend `https://` in code.
-_(You are using https... right?)_
+`https://www.example.com` will ignore everything after `https:`. 
+Insert an empty variable between the slashes to avoid it
+`https:/$()/www.example.com`.
 
 {% endwarning %}
 
