--- a/2020-02-27-xcconfig.md
+++ b/2020-02-27-xcconfig.md
@@ -12,6 +12,7 @@ status:
 revisions:
   2019-05-13: Initial Publication
   2020-02-27: Updated for Xcode 11.4
+  2020-03-04: Fix typo
 ---
 
 Software development best practices
@@ -252,7 +253,7 @@ for its associated targets.
 
 {% info %}
 
-Build configuration files shouldn't included in any of your project's targets.
+Build configuration files shouldn't be included in any of your project's targets.
 If you find any `.xcconfig` files showing up in your app's `.ipa` archive,
 make sure that they aren't a member of any targets
 and don't appear in any "Copy Bundle Resources" build phases.
