Fix typo in (excellent and helpful 😃) xcconfig explainer (#709)

--- a/2020-02-27-xcconfig.md
+++ b/2020-02-27-xcconfig.md
@@ -252,7 +252,7 @@ for its associated targets.
 
 {% info %}
 
-Build configuration files shouldn't included in any of your project's targets.
+Build configuration files shouldn't be included in any of your project's targets.
 If you find any `.xcconfig` files showing up in your app's `.ipa` archive,
 make sure that they aren't a member of any targets
 and don't appear in any "Copy Bundle Resources" build phases.
