--- a/2018-07-09-swift-gyb.md
+++ b/2018-07-09-swift-gyb.md
@@ -93,7 +93,7 @@ for variable substitution and flow control:
 
 All other text is passed through unchanged.
 
-A good example of GYB can be found in [Codable.swift.gyb](https://github.com/apple/swift/blob/master/stdlib/public/core/Codable.swift.gyb).
+A good example of GYB can be found in [Codable.swift.gyb](https://github.com/apple/swift/blob/swift-4.2-branch/stdlib/public/core/Codable.swift.gyb).
 At the top of the file,
 the base `Codable` types are assigned to an instance variable:
 
