--- a/2018-12-03-homebrew.md
+++ b/2018-12-03-homebrew.md
@@ -128,7 +128,7 @@ build:
 	swift build -c release --disable-sandbox
 
 install: build
-	install -d "$(bindir)"
+	install -d "$(bindir)" "$(libdir)"
 	install ".build/release/swift-syntax-highlight" "$(bindir)"
 	install ".build/release/libSwiftSyntax.dylib" "$(libdir)"
 	install_name_tool -change \
