Updates for GitHub Codespaces announcement

--- a/2018-11-19-vscode.md
+++ b/2018-11-19-vscode.md
@@ -8,9 +8,10 @@ excerpt: >-
   With LSP for Swift now shipping in Xcode, 
   it’s a great time to see how this integration works for yourself.
 status:
-  swift: 5.1
+  swift: 5.2
 revisions:
   2020-02-06: Updated for Xcode 11.4
+  2020-05-06: Updated for GitHub Codespaces Announcement
 ---
 
 [Visual Studio Code (VSCode)](https://code.visualstudio.com)
@@ -53,6 +54,18 @@ Running this command presents a system prompt.
 Click the "Get Xcode" button
 and continue installation on the App Store.
 
+You can verify that everything is working as expected
+by running the `sourcekit-lsp` command:
+
+```terminal
+$ xcrun sourcekit-lsp
+```
+
+This command launches a new language server process,
+but don't worry if it doesn't provide any feedback to `STDOUT` ---
+that means it's working as intended.
+Exit the process with an ETX signal (<kbd>^</kbd><kbd>C</kbd>).
+
 ## Step 1: Install Visual Studio Code
 
 [Download Visual Studio Code](https://code.visualstudio.com)
@@ -71,47 +84,7 @@ its performance and memory footprint are comparable to a native app.
 
 {% endinfo %}
 
-## Step 2: Install the Latest Swift Toolchain
-
-{% info %}
-
-You can skip this step if you're running Xcode 11.4 or later,
-which includes `sourcekit-lsp` in the default toolchain.
-
-While Xcode 11.4 is in beta,
-make sure to select the corresponding toolchain with `xcode-select`.
-
-```terminal
-$ sudo xcode-select -switch /Applications/Xcode-beta.app/
-```
-
-{% endinfo %}
-
-Go to [Swift.org](https://swift.org/download/)
-and download the latest trunk development snapshot
-(at the time of writing, this was from November 16th, 2018).
-Once it's finished downloading,
-run the package to install the Xcode toolchain.
-To enable it,
-open Xcode,
-select the "Xcode > Preferences..." menu item (<kbd>⌘</kbd><kbd>,</kbd>),
-navigate to Components
-and choose Swift Development Snapshot.
-
-You can verify that everything is working as expected
-by running the `sourcekit-lsp` command:
-
-```terminal
-$ xcrun sourcekit-lsp
-```
-
-This command launches a new language server process,
-but don't worry if it doesn't provide any feedback to `STDOUT` ---
-that means it's working as intended.
-Exit the process with an ETX signal (<kbd>^</kbd><kbd>C</kbd>).
-
-
-## Step 3: Install Node and NPM
+## Step 2: Install Node and NPM
 
 VSCode extensions are written in JavaScript / TypeScript.
 If you're not already set up for JS development,
@@ -132,7 +105,7 @@ $ npm --version
 6.13.4
 ```
 
-## Step 4: Build and Install SourceKit-LSP Extension for Visual Studio Code
+## Step 3: Build and Install SourceKit-LSP Extension for Visual Studio Code
 
 From the command line,
 clone the [sourcekit-lsp repository](https://github.com/apple/sourcekit-lsp)
@@ -166,6 +139,12 @@ the [Swift Lint extension](https://marketplace.visualstudio.com/items?itemName=s
 
 So there you have it ---
 the makings of a first-class Swift development experience outside of Xcode.
-For now, Swift support for Language Server Protocol is limited,
-but we couldn't be more excited for the future of this project
-and what it means for Swift beyond the Apple ecosystem.
+
+And with GitHub's recent announcement of
+[Codespaces](https://github.com/features/codespaces/),
+that future may be coming sooner than we once thought.
+Thanks to Swift's support for
+[Language Server Protocol](/language-server-protocol/),
+we'll soon be able to edit Swift code —
+syntax highlighting, autocompletion, and all —
+directly from the browser.
