Typo and syntax fix.

--- a/2020-03-26-swift-log.md
+++ b/2020-03-26-swift-log.md
@@ -407,7 +407,7 @@ $ swift run audit
 
 Thinking back to our objections in the original example,
 the only remaining concern 
-is the what we actually _do_ with these logs.
+is what we actually _do_ with these logs.
 
 According to [12 Factor App](https://12factor.net/logs) principles:
 
@@ -457,7 +457,7 @@ LoggingSystem.bootstrap { label in
     var slackHandler = SlackLogHandler(label: label, webhookURL: webhookURL)
     slackHandler.logLevel = .critical
 
-    let syslogHandler = SyslogLogHandler(label: label),
+    let syslogHandler = SyslogLogHandler(label: label)
 
     return MultiplexLogHandler([
         syslogHandler,
