Add instructions to use swift-5.2 of lsp

--- a/2018-11-19-vscode.md
+++ b/2018-11-19-vscode.md
@@ -115,6 +115,7 @@ and then use the `code` command to install it:
 
 ```terminal
 $ git clone https://github.com/apple/sourcekit-lsp.git
+$ git checkout swift-5.2-branch
 $ cd sourcekit-lsp/Editors/vscode/
 $ npm run createDevPackage
 $ code --install-extension out/sourcekit-lsp-vscode-dev.vsix
