Clone only needed branch

--- a/2018-11-19-vscode.md
+++ b/2018-11-19-vscode.md
@@ -114,8 +114,7 @@ Use `npm` to build the extension
 and then use the `code` command to install it:
 
 ```terminal
-$ git clone https://github.com/apple/sourcekit-lsp.git
-$ git checkout swift-5.2-branch
+$ git clone -b swift-5.2-branch --single-branch https://github.com/apple/sourcekit-lsp.git
 $ cd sourcekit-lsp/Editors/vscode/
 $ npm run createDevPackage
 $ code --install-extension out/sourcekit-lsp-vscode-dev.vsix
