--- a/2020-06-26-wwdc-2020.md
+++ b/2020-06-26-wwdc-2020.md
@@ -3,7 +3,7 @@ title: WWDC 2020
 author: Mattt
 category: Miscellaneous
 excerpt: >-
-  A brief recap of the excitement from Apple's annual developer conference.
+  A brief remark about the excitement of Apple's annual developer conference.
 ---
 
 Like everything else in 2020,
