--- a/2020-06-26-wwdc-2020.md
+++ b/2020-06-26-wwdc-2020.md
@@ -151,7 +151,7 @@ There wasn't any applause (or heckling) at this year's keynote
 to gauge the temperature in the room.
 There were no parties to overhear shop talk and hot takes.
 There was no line for lunch
-to make small talk with a fellow employee.
+to make small talk with a fellow attendee.
 
 But if [Twitter][#wwdc20] is anything to go on,
 my overall impression is that everyone is really _excited_.
@@ -230,6 +230,8 @@ Do whatever you need to break free of the "reality distortion field".
 Once you do, you'll have the necessary distance to determine
 what new technologies you should pay attention to
 and what you can ignore for now.
+
+We have a lot of work ahead of us.
 
 [wwdc 1990]: http://bslabs.net/2020/06/19/wwdc-1990/
 [wwdc 1997]: http://bslabs.net/2018/05/28/wwdc-1997-videos/
