--- a/2020-02-27-xcconfig.md
+++ b/2020-02-27-xcconfig.md
@@ -432,7 +432,7 @@ request.httpMethod = method
 
 Don't use `xcconfig` files to store secrets like API keys or other credentials
 For more information,
-please refer to our article about [secret mangement on iOS](/secrets/).
+please refer to our article about [secret management on iOS](/secrets/).
 
 {% enderror %}
 
