--- a/2018-11-19-vscode.md
+++ b/2018-11-19-vscode.md
@@ -12,7 +12,7 @@ status:
 revisions:
   2020-02-06: Updated for Xcode 11.4
   2020-05-06: Updated for GitHub Codespaces Announcement
-  2020-05-06: Added section on setting  Codespaces Announcement
+  2020-08-17: Added section on setting Server Path value
 ---
 
 [Visual Studio Code (VSCode)](https://code.visualstudio.com)
