collection classes -> types

--- a/2018-08-13-hashable.md
+++ b/2018-08-13-hashable.md
@@ -35,7 +35,7 @@ Much better than a queue, I think you'll agree!
 Our topic this week is `Hashable`
 and its new related type, `Hasher`.
 Together, they comprise the functionality underlying two of Swift's
-most beloved collection classes: `Dictionary` and `Set`.
+most beloved collection types: `Dictionary` and `Set`.
 
 ---
 
