--- a/2019-12-16-direct.md
+++ b/2019-12-16-direct.md
@@ -64,7 +64,7 @@ with the creation of the Smalltalk programming language.
 
 <aside class="parenthetical">
 
-During this time, researches at Xerox PARC also developed the
+During this time, researchers at Xerox PARC also developed the
 [Xerox Alto](https://en.wikipedia.org/wiki/Xerox_Alto),
 which would become the inspiration for Apple's Macintosh
 and all other <abbr title="graphical user interface">GUI</abbr> computers.
