Fix liquid escaping

--- a/2025-02-14-ollama.md
+++ b/2025-02-14-ollama.md
@@ -67,6 +67,7 @@ Similar to how Dockerfiles define container images,
 Ollama uses <dfn>Modelfiles</dfn> to configure model behavior:
 
 ```dockerfile
+{% raw %}
 FROM mistral:latest
 PARAMETER temperature 0.7
 TEMPLATE """
@@ -76,6 +77,7 @@ You are a helpful assistant.
 
 User: {{.Prompt}}
 Assistant: """
+{% endraw %}
 ```
 
 Ollama uses the [Open Container Initiative (OCI)](https://opencontainers.org)
